# solana-world-article

./: Anchor.toml  copyIdl.js  package.json
app/: .babelrc  README.md  config.js  package.json  webpack.config.js
app-b/: package.json  webpack.config.js
app-b/docs/: index.html
app-b/src/: Home.js
app/docs/: build.js  bundle.js  index.html  vendors-node_modules_blocto_sdk_dist_blocto-sdk_umd_js.bundle.js  vendors-node_modules_ledgerhq_hw-transport-webhid_lib-es_TransportWebHID_js.bundle.js  vendors-node_modules_solflare-wallet_sdk_lib_esm_index_js.bundle.js  vendors-node_modules_toruslabs_solana-embed_dist_solanaEmbed_esm_js.bundle.js
app/src/: App.js  Home.js  WalletContext.js  idl.json  index.ejs  index.js  solana_global_article.json  styles.styl
docs/: CNAME  _7874-_ed1b-_d17e.bundle.js  node_modules_project-serum_sol-wallet-adapter_dist_esm_index_js.bundle.js  vendors-node_modules_ledgerhq_hw-transport-webhid_lib-es_TransportWebHID_js.bundle.js
programs/solana-global-article/: Cargo.toml
programs/solana-global-article/src/: lib.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-C5NeqhN3sBVym5rba8uYjaGiUzqiSPBussGnu89XwwUu.tar.bz2  snapshot-1100-FyU1sguSxTqttzKTjLX6NQbXZQb3KKYSTTw6LNrrKZ6h.tar.bz2  snapshot-1200-HVqEwSvdPFFQ6fdexUBdFZLs7p9rtQy93gK6dKewA9XY.tar.bz2  validator-keypair.json  vote-account-keypair.json
test-ledger/accounts/: 0.1  100.0  1000.21  1029.22  105.4  1100.23  1119.24  1200.25  1204.26  126.2  200.3  212.5  300.6  330.7  400.8  404.9  500.10  512.11  600.12  610.13  700.14  (+6 more)
tests/: solana-global-article.ts
(+25 files in other folders)
